Update proposal detail document to add access token field
